# dualarm_mobile

./: .gitignore  README.md
dualarm_mobile_bringup/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
dualarm_mobile_bringup/include/dualarm_mobile_bringup/: publisher.h
dualarm_mobile_bringup/launch/: .bringup_rplidar_velodyne.launch.swp  base.launch  bringup.launch  bringup_ours.launch  bringup_rplidar_velodyne.launch  dual_real.launch  dual_sim.launch  robot.launch  rplidar_arg.launch  sensor.launch
dualarm_mobile_bringup/script/: ddpg.py
dualarm_mobile_bringup/src/: .bringup_publisher.cpp.swp  .odometry.cpp.swp  bringup_publisher.cpp  cmd_vel_publisher.cpp  odom_publisher.cpp  odometry.cpp  scan_publisher.cpp  tf_broadcaster.cpp  time_publisher.cpp  vehicle_controller.cpp
dualarm_mobile_bringup/srv/: Rostime.srv
dualarm_mobile_description/: CMakeLists.txt  package.xml
dualarm_mobile_description/launch/: display.launch  gazebo.launch
dualarm_mobile_description/meshes/: base_link.STL  bl_wheel_link.STL  br_suspension_link.STL  br_wheel_link.STL  fl_wheel_link.STL  fr_suspension_link.STL  fr_wheel_link.STL  front_velodyne.STL  rear_velodyne.STL
dualarm_mobile_description/urdf/: base.gazebo.xacro  base.urdf.xacro  mobile_robot_description_v2.urdf  real_robot.urdf.xacro  robot.urdf.xacro
dualarm_mobile_localization/launch/: amcl.launch  cartographer_navigation.launch  cartographer_navigation_point.launch  cartographer_slam.launch  cartographer_slam_point.launch  gmapping.launch
dualarm_mobile_localization/maps/: D606_map.pgm  D606_map.yaml  map.pgm  map.yaml
dualarm_mobile_localization/rviz/: rviz.rviz
dualarm_mobile_navigation/: CMakeLists.txt  package.xml
dualarm_mobile_navigation/launch/: amcl.launch  cmd_publisher.launch  gmapping.launch  move_base.launch  navigation.launch  teb_local_planner.launch
dualarm_mobile_navigation/maps/: map.pgm  map.yaml
dualarm_mobile_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
dualarm_mobile_navigation/rviz/: navigation.rviz  rviz.rviz
dualarm_mobile_planner/launch/: teb_local_planner.launch
dualarm_mobile_planner/params/: costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
dualarm_mobile_slam/: CMakeLists.txt  package.xml
dualarm_mobile_slam/launch/: slam_gmapping.launch
dualarm_mobile_slam_navi/: CMakeLists.txt  package.xml
dualarm_mobile_slam_navi/config/: dual_lds_2d.lua
dualarm_mobile_slam_navi/launch/: navi.launch  navi_dy.launch  navi_st.launch  slam.launch  slam_dy.launch  slam_navi.launch  slam_st.launch
dualarm_mobile_slam_navi/maps/: map.pgm  map.yaml
dualarm_mobile_slam_navi/param/: costmap_common_params.yaml  costmap_common_params_st.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_dy.yaml  teb_local_planner_params_st.yaml
dualarm_mobile_slam_navi/rviz/: slam_navi.rviz
dualarm_mobile_slam_navi/scripts/: cmd_publisher.py
dualarm_mobile_slam_navi/src/: flat_world_imu_node.cpp
dualarm_mobile_teleop/: CHANGELOG.rst  CMakeLists.txt  CMakelists.txt  package.xml  setup.py
dualarm_mobile_teleop/launch/: dual_teleop_key.launch  dualarm_mobile_teleop_joy.launch  dualarm_mobile_teleop_key.launch  teleop_joy.launch
dualarm_mobile_teleop/nodes/: dualarm_mobile_teleop_key
dualarm_mobile_teleop/scripts/: dualarm_mobile_teleop_key
dualarm_mobile_teleop/src/: dualarm_mobile_teleop_joy.cpp  teleop_joy.cpp
dualarmbot_bringup/: CMakeLists.txt  package.xml
dualarmbot_bringup/launch/: control.launch  robot.launch
dualarmbot_bringup/src/: vehicle_controller.cpp
dualarmbot_description/: CMakeLists.txt  package.xml
dualarmbot_description/urdf/: base.gazebo.xacro  base.urdf.xacro
dualarmbot_navigation/launch/: amcl.launch
dualarmbot_navigation/maps/: map.pgm
dualarmbot_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml
dualarmbot_navigation/scripts/: cmd_publisher.py
dualarmbot_slam/launch/: slam_cartographer.launch
dualarmbot_slam/rviz/: slam.rviz
dualarmbot_teleop/: CMakelists.txt
dualarmbot_teleop/scripts/: dualarmbot_teleop_key
turtlebot3_teleop/nodes/: turtlebot3_teleop_key
