<?xml version="1.0"?>
<package>
  <name>dualarmbot_navigation</name>
  <version>0.0.1</version>
  <description>2d base navigation</description>

    <license>GPLv3</license>

  <author email="seungchul0406@gmail.com">Seungchul Ha</author>

  <maintainer email="seungchul0406@gmail.com">Seungchul Ha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>mcr_default_env_config</run_depend>
  <run_depend>mcr_navigation_tools</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>topic_tools</run_depend>

  <test_depend>roslaunch</test_depend>  

</package>
